Bug 666927, clean up nsBoxFrame::GetLayoutManager to return value, r=roc