layout/xul/base/src/grid/nsGridLayout2.cpp
@@ -78,13 +78,7 @@ nsGridLayout2::Layout(nsIBox* aBox, nsBoxLayoutState& aBoxLayoutState)
 {
   // XXX This should be set a better way!
   mGrid.SetBox(aBox);
-#ifdef DEBUG
-  {
-    nsCOMPtr<nsIBoxLayout> lm;
-    aBox->GetLayoutManager(getter_AddRefs(lm));
-    NS_ASSERTION(lm == this, "setting incorrect box");
-  }
-#endif
+  NS_ASSERTION(aBox->GetLayoutManager() == this, "setting incorrect box");
 
   nsresult rv = nsStackLayout::Layout(aBox, aBoxLayoutState);
 #ifdef DEBUG_grid
@@ -108,14 +102,7 @@ nsGridLayout2::GetGrid(nsIBox* aBox, PRInt32* aIndex, nsGridRowLayout* aRequesto
 {
   // XXX This should be set a better way!
   mGrid.SetBox(aBox);
-#ifdef DEBUG
-  {
-    nsCOMPtr<nsIBoxLayout> lm;
-    aBox->GetLayoutManager(getter_AddRefs(lm));
-    NS_ASSERTION(lm == this, "setting incorrect box");
-  }
-#endif
-
+  NS_ASSERTION(aBox->GetLayoutManager() == this, "setting incorrect box");
   return &mGrid;
 }
 
